yaml-standard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  namespace: standard
spec:
  ingressClassName: traefik
  tls:
    - secretName: fastapi-secret
      hosts:
        - exam-k8s.mathiasb.cloudns.ph
  rules:
  - host: exam-k8s.mathiasb.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapi-service
              port:
                number: 80
